# seitocamera-admin

./: .dockerignore  .env.production.example  .gitignore  Agent_Comptable_IA_SeitoCamera.docx  CLAUDE.md  PROPOSTA_MODUL_PROTOCOL_EMPRESA.md  PROPOSTA_REDISENY_COMPTABILITAT.md  README.md  backup_local.dump  backup_local.sql  deploy.sh  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
marketing/: .env.example  .gitignore  ARQUITECTURA_TECNICA.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
marketing/dry_runs/investigator_2026-04-22/: market_research.json  report.md
marketing/evals/: README.md  run_eval.py
marketing/evals/golden_competitors/: seito_camera.json
marketing/evals/golden_leads/: seito_camera.json
marketing/examples/: seito_camera.json
marketing/scripts/: full_run.py  smoke_fact_checker.py  smoke_investigator.py  smoke_lead_hunter.py  smoke_ollama.py  smoke_strategist.py  verify_keys.py
marketing/src/: __init__.py  admin_client.py  cli.py  settings.py
marketing/src/agents/: __init__.py  base.py  fact_checker.py  lead_hunter.py  strategist.py
marketing/src/llm/: __init__.py  anthropic_client.py  ollama_client.py  types.py
marketing/src/memory/: models.py
marketing/src/orchestration/: budget.py  workflow.py
marketing/src/prompts/: fact_checker.md  investigator.md  lead_hunter.md  manager.md  strategist.md
marketing/src/schemas/: briefs.py  business.py  strategy.py
marketing/src/tools/: base.py
marketing/src/utils/: language.py
marketing/tests/unit/: test_schemas.py
(+330 files in other folders)
