[project]
name = "seito-marketing-ai"
version = "0.1.0"
description = "Hierarchical multi-agent marketing system for SMBs"
requires-python = ">=3.12"
authors = [{ name = "Seito Camera" }]
license = { text = "Proprietary" }

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.18",
    "pgvector>=0.3.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "playwright>=1.44.0",
    "exa-py>=1.0.9",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-recording>=0.13.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
seito = "src.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
